[project]
name = "lmarena_draws"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "openai>=1.101.0",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "scipy>=1.16.1",
    "tenacity>=9.1.2",
    "tiktoken>=0.11.0",
    "tqdm>=4.67.1",
    "trueskill>=0.4.5",
    "datasets>=4.0.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
